04_Kubernetes/k8s-manifest/ingress/pod..yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  containers:
  - name: nginx
    image: nginx

    ports:
      - containerPort: 80
