04_Kubernetes/k8s-manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  nginx-ingress

spec:
  ingressClassName: nginx
  
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-service
            port:
              number: 80
