04_Kubernetes/k8s-manifest/ingress/multiple-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-path-ingress

spec:
  rules:
    - host: app.local
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 80

        - path: /web
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 80
